fix examples and required start alignment for horizontal FormFields

--- a/src/FormField/formField.scss
+++ b/src/FormField/formField.scss
@@ -21,7 +21,6 @@ $label-color: $brc-darkGreyBlue;
         font-size: 17px;
         position: absolute;
         left: 0;
-        top: 0;
         font-weight: $brc-regular;
       }
     }
